feat(httpapi): serve init, unseal and seal
